[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/TitleScreen/TitleScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Gameplay/Gameplay.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Main.gd" type="Script" id=3]
[ext_resource path="res://Characters/Butterfly/Butterfly.tres" type="Resource" id=4]
[ext_resource path="res://Scenes/PauseMenu/PauseMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/DeathMenu/DeathMenu.tscn" type="PackedScene" id=6]

[node name="Game" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -431.142, -178.26 )
mouse_filter = 1
script = ExtResource( 3 )
character = ExtResource( 4 )

[node name="TitleScreen" parent="." instance=ExtResource( 1 )]

[node name="Gameplay" parent="." instance=ExtResource( 2 )]

[node name="MenuLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="PauseMenu" parent="MenuLayer" instance=ExtResource( 5 )]
pause_mode = 2

[node name="DeathMenu" parent="MenuLayer" instance=ExtResource( 6 )]
pause_mode = 2

[connection signal="disappeared" from="TitleScreen" to="." method="_on_TitleScreen_disappeared"]
[connection signal="ended" from="Gameplay" to="." method="_on_Gameplay_ended"]
[connection signal="paused" from="Gameplay" to="." method="_on_Gameplay_paused"]
[connection signal="restart" from="MenuLayer/PauseMenu" to="." method="_on_PauseMenu_restart"]
[connection signal="resume" from="MenuLayer/PauseMenu" to="." method="_on_PauseMenu_resume"]
[connection signal="restart" from="MenuLayer/DeathMenu" to="." method="_on_DeathMenu_restart"]
